# learning-opengl-stuff

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/shaders/: shader.frag  shaders.hpp
